Added number format exception error handler